<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="20dp"
    tools:context=".MainActivity">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/searchText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Поиск"
                android:maxLength="50"
                android:singleLine="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/searchButton"
                android:layout_marginEnd="8dp" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/car_ui_toolbar_search_search_icon"
                android:contentDescription="Поиск"
                android:onClick="onSearchClick"
                app:layout_constraintTop_toTopOf="@+id/searchText"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/comp_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Поиск по совместимости"
                android:textSize="18sp"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/searchText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <Spinner
                android:id="@+id/componentSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/comp_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <Spinner
                android:id="@+id/groupSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/componentSpinner"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@id/rhSpinner" />

            <Spinner
                android:id="@+id/rhSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/componentSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toEndOf="@id/groupSpinner" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/groupSpinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:overScrollMode="ifContentScrolls" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@android:drawable/ic_menu_add"
        android:onClick="onAddClick"
        android:contentDescription="Добавить"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
