...
        android:text="Резус-фактор"
        android:textSize="18sp">

    </TextView>

    <ImageButton
        android:id="@+id/buttonEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:contentDescription="Редактировать"
        android:src="@android:drawable/ic_menu_edit" />
</LinearLayout>
